<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time Lapse</string>
    <string name="menu_settings">Settings</string>

    <!--main activity-->
    <string name="preset_maxim_top">1.01365 = 37.8</string>
    <string name="preset_maxim_bottom">0.99365 = 0.03</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_setting">Setting</string>

    <string name="about_text">For my lost youth!</string>
</resources>
