<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/main_background">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="50dp">

		<TextView
			android:id="@+id/t_main_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/app_name" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<TextView
			android:id="@+id/t_time_number"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:gravity="center"
			android:layout_centerVertical="true"
			android:textSize="@dimen/time_number_text" />

		<TextView
			android:id="@+id/t_maxim_top"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_alignParentTop="true"
			android:layout_above="@id/t_time_number"
			android:background="@color/white"
			android:text="@string/preset_maxim_top"
			android:textSize="@dimen/maxim_top_text" />

		<TextView
			android:id="@+id/t_maxim_bottom"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_alignParentBottom="true"
			android:layout_below="@id/t_time_number"
			android:background="@color/white"
			android:text="@string/preset_maxim_bottom"
			android:textSize="@dimen/maxim_bottom_text" />

	</RelativeLayout>

	<LinearLayout
		android:id="@+id/starting_bar_layout"
		android:layout_width="match_parent"
		android:layout_height="150dp"
		android:orientation="horizontal">


		<FrameLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1">

			<TextView
				android:id="@+id/start_time_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:background="@drawable/btn_circle_bg"
				android:text="@string/btn_start"
				android:textSize="20sp" />
		</FrameLayout>

		<FrameLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1">

			<TextView
				android:id="@+id/reset_time_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:background="@drawable/btn_circle_bg"
				android:text="@string/btn_reset"
				android:textSize="20sp" />

		</FrameLayout>

	</LinearLayout>

</LinearLayout>
